gcc/testsuite/gdc.test/compilable/imports/test68a.d
module imports.test68a;

class OtherModuleClass
{
        protected void foo()
        {
        }
}

