gcc/testsuite/gdc.test/fail_compilation/imports/fail20637b.d
module imports.fail20637b;

class A { private static void foo() { } }
